# alfrescofs

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  TESTING.md  pyproject.toml
src/alfrescofs/: __init__.py  core.py
tests/: conftest.py  test_alfresco_api.py  test_constructor.py  test_helpers.py  test_internals.py  test_live_append.py  test_live_crud.py  test_live_read.py  test_live_versioning.py  test_live_write.py
